# quantum_classical_VQE_algorithm

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  environment.yml  phase1_run_test.py  test_run.py
docs/diagram_code/: hetero_system_arch.py
include/: stack_types.h
src/api/: bridge.cpp  interface.py  problems.py
src/classical/: vqe.py
src/classical/cuda/: kernel.cu
src/dispatcher/: dispatcher.cpp
